gitops/argocd/network-policy.yaml
$patch: delete
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: argocd-repo-server-network-policy
---
$patch: delete
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: argocd-notifications-controller-network-policy
---
$patch: delete
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: argocd-application-controller-network-policy
